--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Node.js Express REST API</title>
 </head>
 <body>
-    <form action="http://abarayu.fullstack.tec:3002/users" class="action" method="post">
+    <form action="http://l18540327.itdelicias.edu.mx:18100/users" class="action" method="post">
         <label for="nombre">Nombre</label>
         <input type="text" name="nombre">
         <label for="apellido">Apellido</label>
